--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body::before {
 }
 
 .model {
-    background-image: url(images/model.jpeg);
+    background-image: url(model.png);
     width: 100%;
     height: 75vh;
     position: absolute;
